# test-actions

./: .gitignore  CHANGELOG.md  pyproject.toml
.dependabot/: config.yml
.github/: release-drafter.yml
.github/workflows/: amplify.yml  python-package.yml
docs/amplify/: team-provider-info.json
docs/amplify/.config/: project-config.json
docs/amplify/backend/: backend-config.json
docs/amplify/backend/analytics/pythondocs/: parameters.json
docs/amplify/backend/auth/cognitocd90cfec/: cognitocd90cfec-cloudformation-template.yml  parameters.json
