[tool.poetry]
name = "lessa"
version = "0.1.0"
description = ""
authors = ["heitorlessa <lessa@amazon.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
aws-lambda-powertools = "^0.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
