[tool.poetry]
name = "dummy_lessa_package"
version = "0.9.17"
description = "dummy"
authors = ["heitorlessa <lessa@amazon.co.uk>"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aws-lambda-powertools = "^0.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
